Fixing footer on mobile

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 @media only screen and (max-width: 62.5rem) {
   .app-container {
     min-width: 100%;
-    padding: 2.5rem 1.25rem;
+    padding: 2.5rem 1.25rem 5rem;
   }
 }
 
